@@ -572,7 +572,8 @@ class Normal(PMGSkin):
             self.cmd.log("save %s,format=pse\n"%(self.save_file),
                       "cmd.save('%s',format='pse')\n"%(self.save_file))
             self.cmd.save(self.save_file,"","pse",quiet=0)
-            return 0
+            self.cmd.set("session_changed",0)
+            return 1
         else:
             return self.session_save_as()
 
@@ -596,7 +597,8 @@ class Normal(PMGSkin):
                       "cmd.save('%s',format='pse')\n"%(sfile))
             self.cmd.save(sfile,"",format='pse',quiet=0)
             self.save_file = sfile
-            self.cmd.set("session_file",self.save_file,quiet=1)
+            self.cmd.set("session_file",self.save_file)
+            self.cmd.set("session_changed",0)
             return 1
         else:
             return 0
