@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2008-12-23 Warren L. DeLano <warren@delsci.com>
+
+	* fixed tk-based session save problems reported by DB
+	
 2008-12-16 Warren L. DeLano <warren@delsci.com>
 
 	* fixed another object-name-dragging bug
